--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,9 +6,8 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
+  build-local:
+    runs-on: [self-hosted, local-runner]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -31,22 +30,71 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Pull existing image for cache (ignore errors if not exists)
-        run: docker pull isshomin/build-cluster:latest || true
+      - name: Build Docker image (LOCAL)
+        run: docker build -t isshomin/build-cluster:local-${GITHUB_SHA} .
 
-      - name: Build Docker image with cache
+      - name: Push Docker image (LOCAL)
+        run: docker push isshomin/build-cluster:local-${GITHUB_SHA}
+
+  build-ec2:
+    runs-on: [self-hosted, ec2-runner]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Grant execute permission for Gradlew
+        run: chmod +x gradlew
+
+      - name: Build with Gradle
+        run: ./gradlew clean build -x test
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Build Docker image (EC2)
+        run: docker build -t isshomin/build-cluster:ec2-${GITHUB_SHA} .
+
+      - name: Push Docker image (EC2)
+        run: docker push isshomin/build-cluster:ec2-${GITHUB_SHA}
+
+  promote-latest:
+    runs-on: [self-hosted, controller]
+    needs: [build-local, build-ec2]
+    if: always()
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Promote latest image
         run: |
-          docker build \
-            --cache-from=isshomin/build-cluster:latest \
-            -t isshomin/build-cluster:latest .
-
-      - name: Push Docker image
-        run: docker push isshomin/build-cluster:latest
+          set -e
+          if docker pull isshomin/build-cluster:local-${GITHUB_SHA}; then
+            echo "✅ Using LOCAL build"
+            docker tag isshomin/build-cluster:local-${GITHUB_SHA} isshomin/build-cluster:latest
+          elif docker pull isshomin/build-cluster:ec2-${GITHUB_SHA}; then
+            echo "⚠️ Local failed, fallback to EC2 build"
+            docker tag isshomin/build-cluster:ec2-${GITHUB_SHA} isshomin/build-cluster:latest
+          else
+            echo "❌ Both builds failed, cannot promote"
+            exit 1
+          fi
+          docker push isshomin/build-cluster:latest
 
   deploy:
-    runs-on: self-hosted
-    needs: build
-
+    runs-on: [self-hosted, controller]
+    needs: promote-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
