--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,38 +6,9 @@ on:
       - main
 
 jobs:
-  build-local:
-    runs-on: [self-hosted, local-runner]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Grant execute permission for Gradlew
-        run: chmod +x gradlew
-
-      - name: Build with Gradle
-        run: ./gradlew clean build -x test
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-      - name: Build Docker image (LOCAL)
-        run: docker build -t isshomin/build-cluster:local-${GITHUB_SHA} .
-
-      - name: Push Docker image (LOCAL)
-        run: docker push isshomin/build-cluster:local-${GITHUB_SHA}
-
   build-ec2:
     runs-on: [self-hosted, ec2-runner]
+    continue-on-error: true
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -61,14 +32,45 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Build Docker image (EC2)
-        run: docker build -t isshomin/build-cluster:ec2-${GITHUB_SHA} .
+        run: docker build -t isshomin/build-cluster:ec2-${{ github.sha }} .
 
       - name: Push Docker image (EC2)
-        run: docker push isshomin/build-cluster:ec2-${GITHUB_SHA}
+        run: docker push isshomin/build-cluster:ec2-${{ github.sha }}
+
+  build-local:
+    runs-on: [self-hosted, local-runner]
+    continue-on-error: true
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Grant execute permission for Gradlew
+        run: chmod +x gradlew
+
+      - name: Build with Gradle
+        run: ./gradlew clean build -x test
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Build Docker image (Local)
+        run: docker build -t isshomin/build-cluster:local-${{ github.sha }} .
+
+      - name: Push Docker image (Local)
+        run: docker push isshomin/build-cluster:local-${{ github.sha }}
 
   promote-latest:
-    runs-on: [self-hosted, controller]
-    needs: [build-local, build-ec2]
+    runs-on: ubuntu-latest
+    needs: [build-ec2, build-local]
     if: always()
     steps:
       - name: Log in to Docker Hub
@@ -77,20 +79,25 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Promote latest image
+      - name: Promote EC2 build to latest (preferred)
         run: |
-          set -e
-          if docker pull isshomin/build-cluster:local-${GITHUB_SHA}; then
-            echo "✅ Using LOCAL build"
-            docker tag isshomin/build-cluster:local-${GITHUB_SHA} isshomin/build-cluster:latest
-          elif docker pull isshomin/build-cluster:ec2-${GITHUB_SHA}; then
-            echo "⚠️ Local failed, fallback to EC2 build"
-            docker tag isshomin/build-cluster:ec2-${GITHUB_SHA} isshomin/build-cluster:latest
+          if docker pull isshomin/build-cluster:ec2-${{ github.sha }}; then
+            docker tag isshomin/build-cluster:ec2-${{ github.sha }} isshomin/build-cluster:latest
+            docker push isshomin/build-cluster:latest
+            echo "✅ EC2 build promoted to latest"
+            exit 0
+          fi
+
+      - name: Fallback to Local build if EC2 failed
+        run: |
+          if docker pull isshomin/build-cluster:local-${{ github.sha }}; then
+            docker tag isshomin/build-cluster:local-${{ github.sha }} isshomin/build-cluster:latest
+            docker push isshomin/build-cluster:latest
+            echo "⚠️ Fallback: Local build promoted to latest"
           else
-            echo "❌ Both builds failed, cannot promote"
+            echo "❌ No build available for promotion"
             exit 1
           fi
-          docker push isshomin/build-cluster:latest
 
   deploy:
     runs-on: [self-hosted, controller]
