--- a/deploy.yml
+++ b/deploy.yml
@@ -10,6 +10,18 @@
     host_port: 8085
 
   tasks:
+    - name: Ensure Docker is installed
+      apt:
+        name: docker.io
+        state: present
+        update_cache: yes
+
+    - name: Ensure Docker service is running
+      service:
+        name: docker
+        state: started
+        enabled: yes
+
     - name: Pull latest image from Docker Hub
       docker_image:
         name: "{{ image_name }}"
