--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,6 +107,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run Ansible Playbook
-        run: ansible-playbook -i inventory.ini deploy.yml
+        run: ansible-playbook -i ./inventory.ini deploy.yml
         env:
           ANSIBLE_HOST_KEY_CHECKING: "False"
